# excel

./: .gitignore  CLAUDE.md  CNAME  PROJECT_INDEX.md  README.md  convert_top10.py  generate_traces.py  hackathon_top10.json  index.html  main.py  pyproject.toml  trace-viewer.html
.github/workflows/: deploy.yml
demos/: 01-receipt.html  02-income-tax.html  03-insurance.html  04-invoice-auto.html  05-statement.html  06-hr-record.html  07-invoice.html  08-fund-request.html  09-construction.html  10-household.html  coupon.html  employment-contract.html  insurance-calculator.html  inventory-manager.html  quote-form.html  receipt.html  sales-dashboard.html  tax-calculator.html  training-log.html  weekly-report.html
docs/: API_REFERENCE.md  ARCHITECTURE.md  PRD.md  PROJECT_INDEX.md  TDD_PIPELINE_ARCHITECTURE.md  openai_agents_sdk_reference.md  tool_stack_research.md
excel_files/: 4대보험_자동계산기_엑셀템플릿.xlsx  form210010084077.xls  form230001093972.xls  교육일지 양식 01.xlsx  교육일지 양식 02.xlsx  교육일지 양식 03(영문본).xlsx  교육일지 양식 04.xlsx  교육일지 양식 05.xlsx  교육일지 양식 06.xlsx  엑셀 간이영수증 표준 양식 v2.0.xlsx  엑셀 매출분석 대시보드 양식 v1.0.xlsx  엑셀 자동화 견적서 v1.0.xlsm  엑셀 표준 근로계약서 양식 v2.0.xlsx  종합소득세 엑셀 간이 계산기 v2.1.xlsx  주간업무보고 표준양식.xlsx
src/: orchestrator.py
tests/: __init__.py  conftest.py  fake_model.py  helpers.py  test_output_models.py  test_tracing.py
traces/: 01-trace.json  02-trace.json  03-trace.json  04-trace.json  05-trace.json  06-trace.json  07-trace.json  08-trace.json  09-trace.json  10-trace.json  trace-viewer.html  trace_20251228_095309_trace_04.json  trace_20251228_095455_trace_34.json
(+502 files in other folders)
