[project]
name = "xls-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.1",
    "formulas>=1.3.3",
    "jinja2>=3.1.6",
    "oletools>=0.60.2",
    "openai-agents>=0.6.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pyexcel>=0.7.4",
    "pyexcel-xls>=0.7.1",
    "pyexcel-xlsx>=0.6.1",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
    "xlrd>=2.0.2",
]
